--- a/app.json
+++ b/app.json
@@ -1,10 +1,25 @@
 {
   "expo": {
+    
+  "extra": {
+    "googleMapsApiKey": "AIzaSyBcTumcJzby9oNVSWOY9UylojEF7vph5nA"
+  },
+
     "name": "alakaride",
     "slug": "alakaride",
     "version": "1.0.0",
-    "newArchEnabled": true,
-
+    "newArchEnabled": false,
+    "ios": {
+      "bundleIdentifier": "com.imotech.alakaride",
+      "supportsTablet": true
+    },
+    "android": {
+      "package": "com.imotech.alakaride",
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      }
+    },
     "scheme": "alakaride",
     "web": {
       "bundler": "metro",
@@ -14,29 +29,16 @@
     "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true,
-
       "tsconfigPaths": true
     },
-
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    }
+    "assetBundlePatterns": ["**/*"]
   }
 }
