--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.3",
     "@rnmapbox/maps": "^10.1.33",
     "@roninoss/icons": "^0.0.4",
