--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/native": "^7.0.3",
-    "@rnmapbox/maps": "^10.1.33",
     "@roninoss/icons": "^0.0.4",
-    "@shopify/flash-list": "1.7.1",
+    "@shopify/flash-list": "1.7.3",
+    "ajv": "^8.17.1",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^52.0.27",
+    "expo": "^53.0.10",
     "expo-constants": "~17.0.4",
-    "expo-dev-client": "~5.0.10",
+    "expo-dev-client": "~5.2.0",
+    "expo-dev-launcher": "^5.1.12",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
     "expo-location": "~18.0.5",
     "expo-navigation-bar": "~4.0.7",
@@ -33,15 +36,19 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.6",
+    "react-icons": "^5.4.0",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "13.12.5",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
